manifest/01_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-gateway
  namespace: app-routable-demo
spec:
  selector:
    # Use Istio’s default ingress gateway
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"  # You can restrict this to a specific domain if needed
